# 2view

./: CMakeLists.txt  README.md  canvas.cpp  canvas.h  draw.cpp  draw.h  main.cpp  main.py  view.cpp  view.h
project/: canvas.py  draw.py  view.py
